--- a/static/main.css
+++ b/static/main.css
@@ -3,6 +3,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -webkit-font-smoothing: antialiased;
   background-color: #f8f8f8;
+  margin: 0;
+  padding: 0;
 }
 
 /* Global button style */
@@ -14,7 +16,7 @@ body {
   text-decoration: none;
   outline: none;
   color: #ffffff;
-  background-color: rgb(0, 120, 212);
+  background-color: rgb(9, 197, 119);
   padding: 0.5rem 1.2rem;
   border-radius: 2px;
   font-size: 1rem;
@@ -22,7 +24,7 @@ body {
 }
 
 .button:hover {
-  background-color: rgb(16, 110, 190);
+  background-color: rgb(66, 243, 12);
 }
 
 .button.disabled {
@@ -60,13 +62,15 @@ body {
 
 /* Upload box */
 .upload-box {
+  width: 100%;
+  max-width: 700px;
   font-size: 0.8rem;
   color: #666666;
   cursor: pointer;
   width: 16rem;
   height: 10rem;
   background: #fff;
-  border: 0.1rem dashed #838388;
+  border: 0.1rem solid #111111;
   border-radius: 0.4rem;
   display: flex;
   justify-content: center;
@@ -104,17 +108,18 @@ body {
   margin-bottom: 2rem;
 }
 
-#image-display {
+/* #image-display {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   max-height: 20rem;
-}
+} */
 
 #image-display.loading {
   filter: brightness(30%);
 }
 
 #pred-result {
-  color: white;
+  color: gray;
+  font-weight: bold;
   font-size: 1.5rem;
   position: absolute;
   top: 50%;
