--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,8 @@
   </div>
 
   <div id="image-box">
-    <img id="image-display" />
+    <!-- <img id="image-display" /> -->
+    <p>Best prediction: </p>
     <div id="pred-result" class="hidden"></div>
     <svg id="loader" class="hidden" viewBox="0 0 32 32" width="32" height="32">
       <circle id="spinner" cx="16" cy="16" r="14" fill="none"></circle>
