--- a/static/main.css
+++ b/static/main.css
@@ -3,8 +3,6 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -webkit-font-smoothing: antialiased;
   background-color: #f8f8f8;
-  margin: 0;
-  padding: 0;
 }
 
 /* Global button style */
@@ -24,7 +22,7 @@ body {
 }
 
 .button:hover {
-  background-color: rgb(66, 243, 12);
+  background-color: rgb(91, 238, 140);
 }
 
 .button.disabled {
@@ -43,9 +41,10 @@ body {
 }
 
 .main .title h3 {
-  font-size: 2.3rem;
-  font-weight: 300;
+  font-size: 60px;
+  font-weight: bold;
   margin: 0.8rem 0;
+  color: #34495E;
 }
 
 .hidden {
@@ -59,24 +58,31 @@ body {
 .reveal:hover {
   opacity: 0.2;
 }
-
+.panel{
+  width: 80%;
+  min-width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Upload box */
 .upload-box {
-  width: 100%;
-  max-width: 700px;
   font-size: 0.8rem;
   color: #666666;
   cursor: pointer;
-  width: 16rem;
-  height: 10rem;
+  width: 80%;
+  min-height: 180px;
+  /* width: 16rem;
+  height: 10rem; */
   background: #fff;
-  border: 0.1rem solid #111111;
-  border-radius: 0.4rem;
+  box-shadow: 1px 1px 1px gray;
+  border-radius: 0.1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 1rem 0 2rem 0;
+  padding: 40px;
+  margin: 40px;
 }
 
 .upload-box.dragover {
@@ -91,9 +97,10 @@ body {
 }
 
 .upload-box #image-preview {
-  max-width: 14rem;
-  max-height: 8rem;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+  max-width: 22rem;
+  /* max-height: 8rem;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19); */
+  
 }
 
 #image-result {
@@ -108,23 +115,20 @@ body {
   margin-bottom: 2rem;
 }
 
-/* #image-display {
+#image-display {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   max-height: 20rem;
-} */
+  display: none;
+}
 
 #image-display.loading {
   filter: brightness(30%);
 }
 
 #pred-result {
-  color: gray;
+  color: limegreen;
+  font-size: 40px;
   font-weight: bold;
-  font-size: 1.5rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 #loader {
